# Shape-modelling-and-geometry-processing-ethz

./: README.md
assignment1/: README.md
assignment1/src/: main.cpp
assignment2/: README.md
assignment2/generated_meshes/: cat.off  cat_anisotropic.off  cat_degree_0.off  cat_degree_1.off  cat_degree_2.off  cat_res_10.off  cat_res_20.off  cat_res_30.off  cat_res_50.off  dog_constraints.off  dog_normals.off  horse.off  hound.off  luigi.off  luigi_constraints.off  luigi_normals.off  luigi_wendland_0.005.off  luigi_wendland_0.01.off  (+4 more)
assignment4/: CMakeLists.txt  README.md
assignment5/: README.md
assignment6/: CMakeLists.txt  README.md  main.cpp
assignment6/data/GP/: body-handles.dmat  body-pose_examples.dmat  body.off  body.tgf  body_00000.off  body_00001.off  body_00002.off  body_00003.off  body_00004.off  body_00005.off  body_00006.off  body_00007.off  body_00008.off  body_00009.off  body_00010.off  body_00011.off  body_00012.off  body_00013.off  body_00014.off  body_00015.off  body_00016.off  body_00017.off  body_00018.off  body_00019.off  body_00020.off  body_00021.off  body_00022.off  body_00023.off  body_00024.off  body_00025.off  body_00026.off  body_00027.off  body_00028.off  body_00029.off  body_00030.off  body_00031.off  body_00032.off  body_00033.off  body_00034.off  body_00035.off  (+65 more)
assignment6/data/context-aware/: all_frames.dmat  eg0.dmat  eg1.dmat  eg2.dmat  eg3.dmat
assignment6/data/cylinder/: eg1.dmat  eg2.dmat  eg3.dmat  eg4.dmat  target.dmat
assignment6/data/hand/: hand-pose_matrot.dmat  hand.off
assignment6/res/: forward_rotation.webm
(+3 files in other folders)
